Create initList func

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <title>GraphletJS Demo</title>
 </head>
 <body>
-    <button onclick="aboutGraphlet()">Click Me</button>
+    <button onclick="initList()">init a list</button>
     <script src="../dist/graphletjs-bundle.js"></script>
 </body>
 </html>
