Create initList func + demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,9 @@
     <title>GraphletJS Demo</title>
 </head>
 <body>
-    <button onclick="initList()">init a list</button>
-    <script src="../dist/graphletjs-bundle.js"></script>
+    <button onclick="demoInitList()">init a list</button>
+    <p id="nodeCount">Your list has 0 items</p>
+    <script src="../dist/library.bundle.js"></script>
+    <script src="../dist/demo.bundle.js"></script>
 </body>
 </html>
