Render state.nodes in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
 <body>
     <button onclick="demoInitList()">init a list</button>
     <p id="nodeCount">Your list has 0 items</p>
+    <ul id="nodesList"></ul>
     <script src="../dist/library.bundle.js"></script>
     <script src="../dist/demo.bundle.js"></script>
 </body>
