Create getRandomToken func + demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <button onclick="demoInitList()">init a list</button>
+    <button onclick="demoGetRandomToken(12)">get a random token</button>
+    <p id="randomToken">Random token: </p>
     <p id="nodeCount">Your list has 0 items</p>
     <ul id="nodesList"></ul>
     <script src="../dist/library.bundle.js"></script>
