Render aboutGraphletJS in demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,15 +7,22 @@
 <body>
     <div class="wrapper">
         <div class="nav">
-            <button onclick="demoInitList()">init a list</button>
+            <button onclick="demoAboutGraphletJS()">about graphletjs</button>    
             <button onclick="demoGetRandomToken(12)">get a random token</button>
-            <button onclick="demoGetListOfLabels('id')">get the list of labels</button>        
+            <button onclick="demoInitList()">init a list</button>
+            <button onclick="demoGetListOfLabels('id')">get the list of labels</button>     
         </div>
         <div class="left">
             <div class="randomToken">
                 <div class="inside">
                     <p>Random Token</p>
                     <div id="randomToken"></div>
+                </div>
+            </div>
+            <div class="aboutGraphletJS">
+                <div class="inside">
+                    <p>About</p>
+                    <div id="aboutGraphletJS"></div>
                 </div>
             </div>
             <div class="labelsList">
