Render right pane based on state.whichNode

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
             <button onclick="demoAboutGraphletJS()">about graphletjs</button>    
             <button onclick="demoGetRandomToken(12)">get a random token</button>
             <button onclick="demoInitList()">init a list</button>
-            <button onclick="demoGetListOfLabels('id')">get the list of labels</button>     
+            <button onclick="demoGetListOfLabels('id')">get the list of labels</button> 
         </div>
         <div class="left">
             <div class="aboutGraphletJS">
@@ -40,7 +40,7 @@
         </div>
         <div class="right">
             <p>Active Node</p>
-            <div id="whichNodeObj"></div>
+            <div id="whichNode"></div>
         </div>
     </div>
     
