Render a styled node object

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
 <body>
     <div class="wrapper">
         <div class="nav">
+            <button onclick="demoClearAll()">clear all</button>
             <button onclick="demoAboutGraphletJS()">about graphletjs</button>    
             <button onclick="demoGetRandomToken(12)">get a random token</button>
             <button onclick="demoInitList()">init a list</button>
@@ -39,7 +40,6 @@
         
         </div>
         <div class="right">
-            <p>Active Node</p>
             <div id="whichNode"></div>
         </div>
     </div>
