Create addNode func + demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,7 @@
             <button onclick="demoInitList()">init a list</button>
             <button onclick="demoGetListOfLabels('id')">get the list of labels</button> 
             <button onclick="demoGetNodeById('aaa')">Get node with id 'aaa'</button>
+            <button onclick="demoGetNodeByKeyPairs()">Get nodes by keypairs</button>
         </div>
         <div class="left">
             <div class="aboutGraphletJS">
