Create onclicks + refactor setWhichNode

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,8 @@
         </div>
         <div class="center">
             <p id="nodeCount">Your list has 0 items</p>
-            <ul id="nodesList"></ul>
+            <ul id="nodesList"
+                class="nodesList"></ul>
         </div>
         <div class="right">
             <div class="getNodesById">
