Update updateNode logic for rel-prefix props

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,7 @@
                 </div>         
             </div>
             <div id="whichNode"></div>
+            <div id="createNodeModal"></div>
         </div>
     </div>
     
