Stash in modal hell

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
                 </div>         
             </div>
             <div id="whichNode"></div>
-            <div id="createNodeModal"></div>
+            <div id="createNodeModal" class="createNodeModal"></div>
         </div>
     </div>
     
