Get the list of keys + Autoupdate labels list

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
             <button onclick="demoGetRandomToken(12)">get a random token</button>
             <button onclick="demoInitList()">init a list</button>
             <button onclick="demoGetListOfLabels('id')">get the list of labels</button> 
+            <button onclick="demoGetListOfKeys()">get the list of keys</button> 
             <button onclick="demoGetNodeById('aaa')">Get node with id 'aaa'</button>
             <button onclick="demoGetNodeByKeyPairs()">Get nodes by keypairs</button>
         </div>
@@ -49,7 +50,7 @@
 
                     // results 
                     <ul id="labelsList"></ul>   
-                </div>         
+                </div>
             </div>
             <div id="whichNode"></div>
         </div>
