Render keys when the list is initialized

--- a/demo/index.html
+++ b/demo/index.html
@@ -35,6 +35,12 @@
                     <ul id="labelsList"></ul>   
                 </div>         
             </div>
+            <div class="keysList">
+                <div class="inside">
+                    <p>Keys</p>
+                    <ul id="keysList"></ul>   
+                </div>         
+            </div>
         </div>
         <div class="center">
             <p id="nodeCount">Your list has 0 items</p>
